@@ -44,7 +44,7 @@
                             <span class="displayCard-left align-left" style="color:white;">
                             </span>
                             <span class="displayCard-right" style="float:right;color:white;">
-                              <span class="px-2 flex-fill subs"><i class="fas fa-star"></i> <b>{{channel.subscriptions|length}}</b></span>
+                              <span class="px-2 flex-fill subs"><i class="fas fa-star"></i> <b>{{channel.subscriptions}}</b></span>
                               <span class="px-2 flex-fill views"><i class="fas fa-users"></i> <b>{{channel.views}}</b></span>
                             </span>
                           </div>
