@@ -4,7 +4,9 @@ OSP-Core: Added /apiv1/server/ping endpoint for up/down checks - 1678bc6d4b35d08
 OSP-Core: Added ejabberdServerHttpBindFQDN config.py variable to handle issues with Docker - b25d6166e42ff32af631ea6f1e04cb659e2efda9
 OSP-Core: Fixes an issue where the the Channel Creation API would return Unsupported Operand #415 - 2ac68c849ba49ed6c0f05138736b8740e2fafe6f
 OSP-Core: Fixes an issue in User Creation API which would return an error #418 - 52b83f0c7f68dc28cbf3d9279063e40e9f1b7b73
+OSP-Core: Fixes User Deletion to Remove all Channels, Videos, owned by deleted user
 OSP-Core: Adds /migrations to Git Ignore - 71e80a0bd7ed70e957d9ed59324717c15fdb46ac
+OSP-Core: Optimized the DB Query for /channels
 
 0.8.9
 ==============================================
